test/libyul/yulSyntaxTests/invalid/unicode_string_direction_override.sol
{
    // pop 1
    let s := unicode"underflow ‬";
}
// ----
// ParserError 1856: (35-47): Literal or identifier expected.
